<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">VanCloud</string>
    <string name="title_company">Company Info.</string>
    <string name="title_create_task">Create Task</string>
    <string name="title_create_announcement">Create Announcement</string>
    <string name="title_create_shared">Create Sharing</string>
    <string name="title_schedule_update">Schedule Modification</string>
    <string name="title_schedule_detail">Schedule Info.</string>
    <string name="title_create_workreport">Create Work Report</string>
    <string name="title_create_work_group">Create Work Group</string>
    <string name="vancloud_plan">VanCloud Plan</string>
    <string name="title_work_group_name">Group Name</string>
    <string name="title_work_group_edit">Edit Group</string>
    <string name="tip_no_comment">No Comment</string>
    <string name="tip_no_praise">No Likes</string>
    <string name="title_work_group_nameedit">Please Input Group Name</string>
    <string name="btn_info">Details</string>
    <string name="text_photo">Profile Photo</string>
    <string name="toast_get_location">Acquiring location info....</string>
    <string name="host">HOST：</string>
    <string name="port">PORT：</string>
    <string name="btn_retry">Retry</string>
    <string name="title_error">Reminder Error</string>
    <string name="lable_praise_count">%1$d People</string>
    <string name="errcode_success">Successfully Share</string>
    <string name="errcode_cancel">Exit</string>
    <string name="errcode_deny">Reject</string>
    <string name="errcode_unknown">Unknown error</string>
    <string name="normal">Hold To Talk</string>
    <string name="recording">Loosen to end</string>
    <string name="want_to_cancle">Loosen to cancel sending</string>
    <string name="shouzhishanghua">Slide up to cancel sending</string>
    <string name="tooshort">Record time is too short</string>
    <string name="hint_input_content">Please input contents...</string>
    <string name="lable_city_select">Select City</string>
    <string name="lable_jcxq">Research Details</string>
    <string name="lable_msg">Chat</string>
    <string name="lable_message">Message</string>
    <string name="lable_phone">Call</string>
    <string name="lable_create_chatgroup">Create Group</string>
    <string name="tab_work">Work Group</string>
    <string name="title_group_select">Select Personnel</string>
    <string name="btn_finish">Complete</string>
    <string name="btn_send">Send</string>
    <string name="lable_location">Display Location</string>
    <string name="btn_submit">Submit</string>
    <string name="hide_search">Search Keyword</string>
    <string name="group_count">(%1$d)</string>
    <string name="group_name">Group Name</string>
    <string name="below_button_me">Mine</string>
    <string name="below_button_home">Homepage</string>
    <string name="below_button_work">Apply</string>
    <string name="below_button_contacts">Contacts</string>
    <string name="below_button_msg">Message</string>
    <string name="hint_input_name">Please input name</string>
    <string name="hint_input_info">Please input the info. to modify</string>
    <string name="hint_company_number">Please input business license code</string>
    <string name="toast_chatgroup_empty">Please re-select Group Participant</string>
    <string name="bd_mobile">Phone</string>
    <string name="finish">Complete</string>
    <string name="prompt_pass">Please input password</string>
    <string name="error_field_required">Required Field</string>
    <string name="send">Send</string>
    <string name="organization">Organization Structure</string>
    <string name="msg_push_voice">Alert Sound</string>
    <string name="msg_push_vibration">Alert Vibration</string>
    <string name="password_change">Modify Password</string>
    <string name="feedback">Feedback</string>
    <string name="vancloud_coustom_service">VanCloud Customer Service</string>
    <string name="clear_cache">Clear Local Cache</string>
    <string name="new_version">Update Version</string>
    <string name="feature_introduce">Feature Introduction</string>
    <string name="system_notify">System Notice</string>
    <string name="privacy_clause">Privacy Terms</string>
    <string name="language_settings">Language</string>
    <string name="log_out">Exit Account</string>
    <string name="login_again">Re-login</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_english">English</string>
    <string name="select_avatar">Select Profile Phone</string>
    <string name="select_camera">Select Camera</string>
    <string name="select_photo">Phone Album</string>
    <string name="cancel">Cancel</string>
    <string name="network_error">Your network speed is not impressive !</string>
    <string name="request_failure">Request Failure</string>
    <string name="operation_success">Operation Success</string>
    <string name="operation_failure">Operation Failure</string>
    <string name="app_logout">Are you sure to exit current account?</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="work_group_delete">Delete Work Group</string>
    <string name="confirm">Confirm</string>
    <string name="loading">Loading</string>
    <string name="date">Date</string>
    <string name="ok">Confirm</string>
    <string name="toast_resign">Please select resign reason</string>
    <string name="toast_resign_time">Please select resign time</string>
    <string name="toast_resign_work_time">Please select last work time</string>
    <string name="clip_photo">Clip Photo</string>
    <string name="update_success">Successfully Modify</string>
    <string name="offline_title">Offline Notice</string>
    <string name="offline_reasion">Abnormally login. Will you login again?</string>
    <string name="age">Age</string>
    <string name="nearby">Nearby</string>
    <string name="service_setting">Server Setup</string>
    <string name="bd_project_count">Selected Items: %1$d Items</string>
    <string name="bd_projects">Research Item</string>
    <string name="bd_project_price">Total Price: %1$d</string>
    <string name="bd_project_prices">Price</string>
    <string name="bd_step_three_loading">Gathering data.......</string>
    <string name="bd_step_three_tip">Generally, results will be returned 30 mins after submission of research, and they can be checked in the research records</string>
    <string name="bd_step_three_wait">The page will transfer to the research records automatically after second(s)</string>
    <string name="all">All</string>
    <string name="saving">Saving</string>
    <string name="nothing_record">No chat logs now…</string>
    <string name="group_chat">Group Chat</string>
    <string name="select_contact">Select Contacts</string>
    <string name="search">Search</string>
    <string name="select_groups">Select Group</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="delete_message">Delete Message</string>
    <string name="copy_message">Copy Message</string>
    <string name="forward">Forward</string>
    <string name="chat_messages">Chat Message</string>
    <string name="people">Person</string>
    <string name="clear_chat_record">Clear Chat Logs</string>
    <string name="chat_name">Group Name</string>
    <string name="delete_and_exit">Delete And Exit</string>
    <string name="delete_chat_record_hint">Are you sure to delete the chat log?</string>
    <string name="deleting">Deleting</string>
    <string name="not_allowed_delete_self">Not allow to delete self</string>
    <string name="please_wait">Please Wait</string>
    <string name="exit_chat_group_hint">Group message will not be received after deletion and exit</string>
    <string name="modify_chat_group_name">Modify Group Name</string>
    <string name="please_rename_group_name">Please select a name for the group</string>
    <string name="select">Select</string>
    <string name="create_new_chat">Create Chat</string>
    <string name="recent_chat">Latest Chat</string>
    <string name="find_chats">Search Chat Log</string>
    <string name="confirm_forward_chat">Are you sure to forward to current chat?</string>
    <string name="my">Mine</string>
    <string name="settings">Set</string>
    <string name="lable_help">Operation Handbook</string>
    <string name="invite">Invite</string>
    <string name="join_group">Join Group Chat</string>
    <string name="you">You</string>
    <string name="will">Will</string>
    <string name="remove_group_chat">Remove Chat</string>
    <string name="remove_my_group_chat">Remove You From Chat</string>
    <string name="exit_group_chat">Exit Chat</string>
    <string name="modify_group_name">Modify Group Name To</string>
    <string name="logout_current_account">Exit Current Account</string>
    <string name="logout_current_account_confirm">Are you sure to exit?</string>
    <string name="clear_cache_confirm">Are you sure to clear?</string>
    <string name="clear_message_confirm">Are you sure to delete the selected info.?</string>
    <string name="clear_cache_success">Successfully Clear</string>
    <string name="logout_current_account_sure">Confirm Exit</string>
    <string name="look_schedule">View Schedule</string>
    <string name="look_task">View Task</string>
    <string name="checked_new_version">Checked New Version</string>
    <string name="next_step">Next</string>
    <string name="old_password">Please input original password</string>
    <string name="new_password">Please input password</string>
    <string name="input_new_password">Re-input new password</string>
    <string name="from_organization">Select From Organization</string>
    <string name="from_workgroup">Select From Work Group</string>
    <string name="update_pwd">Set Password</string>
    <string name="register_you_num">Please input phone number</string>
    <string name="get_verify_code">Get CAPTCHA</string>
    <string name="resend_verify_code">Get CAPTCHA</string>
    <string name="get_verify_code_again">%1$d</string>
    <string name="identifying_code">CAPTCHA</string>
    <string name="phone">Tel</string>
    <string name="new_pwd">Password</string>
    <string name="validate_pwd">Re-confirm</string>
    <string name="please_input_verify_code">Input CAPTCHA</string>
    <string name="employ_plan">Create Recruit Plan</string>
    <string name="forget_password">Forget Password</string>
    <string name="vancloud_close">Close</string>
    <string name="vancloud_plans_prompt01">1. Recommend to company face-to-face, and scan QR code to download and install</string>
    <string name="vancloud_plans_prompt02">2. Share download site, and recommend to company</string>
    <string name="vancloud_recommend_company">Recommend to company</string>
    <string name="vancloud_plans_prompt03">Note: A gift of ￥10.00 is for someone recommending a company and completing register</string>
    <string name="vancloud_flow_approve">Create General Approval</string>
    <string name="vancloud_flow_leave">Create Leave Application</string>
    <string name="recent_contact">Recent Contact</string>
    <string name="your_phone_number">Tel:</string>
    <string name="chane_number_remarks">Please use new Tel to login after change</string>
    <string name="change_phone">Change Phone No.</string>
    <string name="fatie">Post</string>
    <string name="hint_enter_title">Please enter the title</string>
    <string name="update_tip">Update tip</string>
    <string name="update_tip_two">
       1.Change the startup page of app and optimize the startup logic。\n2.Add the display of entry approval and the notice bar at the top of the questionnaire,
        as well as the skip function.\n3.Solve the app flashback problem caused by abnormal data on the application page for overtime.\n4.Fix known bugs.
    </string>
</resources>