<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/general_approval"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/vancloud_flow_approve"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white" />

    <TextView
        android:id="@+id/leave_alone"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/vancloud_flow_leave"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white" />

    <TextView
        android:id="@+id/recruit_plan"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:gravity="center"
        android:text="@string/employ_plan"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>