<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/banckground_color"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vancloud_plans_prompt01"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_pic"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/vancloud_plans_prompt02"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_recommend_friends"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_logout"
            android:singleLine="true"
            android:text="@string/vancloud_recommend_company"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/vancloud_plans_prompt03"
        android:textColor="@color/grey_text_color"
        android:textSize="17sp"
        android:visibility="gone" />

</RelativeLayout>