<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="40dp"
    android:background="@drawable/doalig_bg_shape_agreement_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:gravity="center"
        android:text="@string/update_tip"
        android:textColor="#000000"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:lineSpacingExtra="10dp"
        android:text="@string/update_tip_two"
        android:scrollbars="vertical"
        android:textColor="#555555"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="25dp"
        android:text="@string/vancloud_close"
        android:gravity="center"
        android:textColor="#3ab5ff"
        android:textSize="18sp" />
</LinearLayout>