<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/banckground_color"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <EditText
        android:textSize="15sp"
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="5dip"
        android:maxLength="16"
        android:singleLine="true" />

    <EditText
        android:textSize="15sp"
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/new_password"
        android:maxLength="16"
        android:inputType="textPassword"
        android:padding="5dip"
        android:singleLine="true" />

    <EditText
        android:textSize="15sp"
        android:id="@+id/input_new_password1"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:padding="5dip"
        android:maxLength="16"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/btn_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/comment_blue"
            android:textSize="13sp" />

    </RelativeLayout>
</LinearLayout>