<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />


    <EditText
        android:id="@+id/luntan_fatie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/fatie_et_bg"
        android:hint="@string/hint_enter_title"
        android:padding="8dp"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/luntan_fatie_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/fatie_et_bg"
        android:gravity="top|left"
        android:hint="@string/hint_input_content"
        android:lines="7"
        android:padding="8dp"
        android:textSize="@dimen/text_size_16" />

    <Button
        android:id="@+id/luntan_fatie_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fatie_btn_bg_gray"
        android:padding="10dp"
        android:text="@string/fatie"
        android:textSize="@dimen/text_size_16" />
</LinearLayout>