<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_selected_organization"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/me_item_single"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="@string/from_organization"
        android:textColor="@color/text_black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/out_line" />

    <TextView
        android:id="@+id/btn_selected_workgroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/me_item_single"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="@string/from_workgroup"
        android:textColor="@color/text_black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/out_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:text="@string/recent_contact"
        android:textColor="@color/text_black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/out_line" />
</LinearLayout>