<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="@string/phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="+86 18329103928"
            android:textSize="20sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#eaeaaa" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <EditText
            android:id="@+id/et_pwd1"
            style="@style/EditText_password"
            android:paddingLeft="100dp"
           />

        <TextView
            style="@style/TextView_input"
            android:text="@string/new_pwd" />

        <ImageView
            android:id="@+id/del_pwd1"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dip"
            android:padding="10dip"
            android:src="@drawable/ic_edit_del" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:background="#eaeaea" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <EditText
            android:id="@+id/et_pwd2"
            style="@style/EditText_password"
            android:paddingLeft="100dp"
            />

        <TextView
            style="@style/TextView_input"
            android:text="@string/validate_pwd" />

        <ImageView
            android:id="@+id/del_pwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginRight="5dip"
            android:padding="10dip"
            android:src="@drawable/ic_edit_del" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_set_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_register_bg"
        android:paddingBottom="7dp"
        android:paddingTop="7dp"
        android:text="@string/update_pwd"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>